<resources>
    <string name="app_name">Tenses Bahasa Inggris</string>
    <string name="banner_ad_unit_id">ca-app-pub-2183060236644599/4685529946</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2183060236644599/8241631571</string>
    <string-array name="catagory">
        <item>TENSES (BENTUK WAKTU)</item>
        <item>1. Simple Present</item>
        <item>2. Present Continuous</item>
        <item>3. Present Perfect</item>
        <item>4. Present Perfect Continuous</item>
        <item>5. Simple Past</item>
        <item>6. Past Continuous</item>
        <item>7. Past Perfect</item>
        <item>8. Past Perfect Continuous</item>
        <item>9. Simple Future</item>
        <item>10. Future Continuous</item>
        <item>11. Future Perfect</item>
        <item>12. Future Perfect Continuous</item>
        <item>13. Past Future</item>
        <item>14. Past Future Continuous</item>
        <item>15. Past Future Perfect</item>
        <item>16. Past Future Perfect Continuous</item>
    </string-array>
    <string name="text1">Belajar Tenses</string>
    <string name="text2">Bermain dulu baru belajar</string>
    <string name="text3">/belajartenses/android/tensesbahasainggris"</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Beranda</string>
    <string name="navigation_view_item_2">Profil</string>
    <string name="navigation_view_item_3">Daftar</string>
    <string name="navigasi_kategori_2">Menu Navigasi</string>
    <string name="navigation_view_item_4">Pengaturan</string>
    <string name="navigation_view_item_5">Tentang</string>
    <string name="navigation_view_item_6">Bagikan</string>
    <string name="belajar_sambil_main">text1</string>
    <string name="abis_main_trus_belajar">text2</string>
    <string name="android">Android</string>
    <string name="Penjelasan">Penjelasan dan Pemakaiannya</string>
    <string name="kalimatNominal">Kalimat Nominal</string>
    <string name="kalimatVerbal">Kalimat Verbal</string>
    <string name="description">Pengertian :</string>
    <string name="formula">Rumus :</string>
    <string name="example">Example :</string>
    <string name="PenjelasanTenses">Untuk menyampaikan suatu maksud, keinginan, pernyataan, berita,
        peristiwa, tindakan dan lainnya, secara tertulis maupun secara lisan agar dapat dipahami dan
    dimengerti dengan jelas dan benar. Kapan suatu kejadian itu terjadi, didalam Bahasa Inggris maka kita harus
        mempergunakan bentuk waktu <b>(TENSES)</b> yang tepat dan benar.\n\nYang dimaksud dengan <i>TENSES</i> itu adalah suatu gambaran atau penjelasan kapan suatu pernyataan, berita, peristiwa, tindakan itu terjadi
        didalam kalimat : sekarang, masa lampau ataupun masa yang akan datang. Atau perubahan bentuk dari kata kerja <b>(Verb)</b> yang sesuai dengan waktu
    terjadinya suatu peristiwa dan perubahan keterangan waktu. untuk jelasnya kita ambil contoh sebagai berikut :\n</string>
    <string name="kalimatNominal1">Yang dimaksud kalimat Nominal :\nSuatu kalimat yang tidak mempunyai kata kerja dan bagian terpentingnya adalah Verb (TO BE) yaitu :\n\n<b>a.</b> Setelah subyek langsung diikuti kata benda (Noun)\n<b>b.</b> Setelah subyek langsung diikuti kata sifat (Adjective)\n<b>c.</b> Setelah subyek langsung diikuti kata keterangan (Adverb) misalnya keterangan tempat, waktu, dan lain-lain.\n\n<b>Contoh :</b>\n<b>1.</b> I am a student\n<i>(Saya seorang pelajar)</i>\nmerupakan kata benda (Noun)\n<b>2.</b> Sisca is sick\n<i>(Sisca sakit)</i>\nmerupakan kata sifat (Adjective)\n<b>3.</b> Ayu is here\n<i>(Ayu berada disini)</i>\nmerupakan kata keterangan tempat\n<b>4.</b> It is five o’clock\n<i>(ini pukul lima)</i>\nmerupakan kata keterangan waktu\n</string>
    <string name="kalimatVerbal1">Yang dimaksud dengan kalimat Verbal :\nSuatu kalimat yang bagian terpentingnya adalah predikat, kata kerjanya (Verb) dan akan kita temukan kalimat Transitif dan kalimat Intransitif.\n\n</string>
    <string name="tenses1">Simple Present Tense adalah suatu bentuk kalimat yang menyatakan suatu perbuatan atau peristiwa yang terjadi pada saat sekarang atau kejadian yang merupakan kebiasaan sehari-hari. Arti dari "simple" yaitu sederhana, sedangkan "present" adalah sekarang. Jadi bisa dikatakan bahwa Simple Present adalah tenses (pola kalimat) yang digunakan untuk menceritakan waktu sekarang dalam bentuk sederhana.</string>
    <string name="tenses11">
    <b>( + )</b> S + V1 (s/es)\n<b>( - )</b> S + do/does + not + V1\n<b>( ? )</b> Do/does + S + V1\n</string>
    <string name="tenses111"><b>( + )</b> You are a teacher\n
					<i>(Kamu adalah seorang guru)</i>\n
               <b>( - )</b> You are NOT a teacher\n
                    <i>(Kamu bukan seorang guru)</i>\n
               <b>( ? )</b> Are you a teacher?\n
                    <i>(Apakah kamu seorang guru?)</i>\n\n
    </string>
    <string name="tenses2">Present Continuous Tense digunakan untuk menyatakan suatu perbuatan atau peristiwa yang sedang berlangsung atau sedang dikerjakan, dan belum selesai di waktu sekarang.
</string>
    <string name="tenses22">
    <b>( + )</b> S + to be + Ving\n<b>( - )</b> S + to be + not + Ving\n<b>( ? )</b> to be + S + Ving \n</string>
    <string name="tenses222"><b>( + )</b> I am waiting a letter now\n
                    <i>(Saya sedang menulis surat sekarang.)</i>\n
                <b>( - )</b> They are not speaking English \n
                    <i>(Mereka tidak sedang berbicara Bahasa Inggris.)</i>\n
                <b>( ? )</b> Is he watching TV now?\n
                    <i>(Apakah dia sedang nonton TV sekarang?)</i>\n\n</string>
    <string name="tenses3">Present Perfect Continuous Tenses digunakan untuk menyatakan suatu perbuatan atau persitiwa yang sedang terjadi pada waktu lampau dan masih ada hubungannya dengan saat sekarang.
				</string>
    <string name="tenses33"><b>( + )</b> S + have/has + V3 \n<b>( - )</b> S + have/has + Not + V3 \n<b>( ? )</b> Have/has + S + V3\n</string>
    <string name="tenses333"><b>( + )</b> He has lived there for two years ago.\n
					<i>(Dia telah tinggal di sana selama dua tahun.)</i>\n
                <b>( - )</b> They haven’t come here yet.\n
                    <i>(Mereka belum datang kemari.)</i>\n
                <b>( ? )</b> Have you eaten your bread?\n
                    <i>(Apakah kamu sudah makan rotimu?)</i>\n\n</string>
    <string name="tenses4">Present Perfect Continuous Tense digunakan untuk menyatakan suatu perbuatan atau peristiwa yang dimulai dari waktu lampau dan masin terus berlangsung hingga waktu sekarang.
    </string>
    <string name="tenses44"><b>( + )</b> S + have/has + been + Ving \n<b>( - )</b> S + have/has + not + been + Ving\n<b>( ? )</b> Have/has + S been + Ving\n</string>
    <string name="tenses444"><b>( + )</b> I have been studying English for over nine years. \n
                    <i>(Saya telah belajar bahasa inggris selama lebih dari Sembilan tahun.)</i>\n
                <b>( - )</b> They haven’t been swimming since January.\n
                    <i>(Mereka belum berenang lagi sejak bulan January.)</i>\n
                <b>( ? )</b> Has she been studying English for two year?\n
                    <i>(Apakah dia teleh mempelajari bahsa Inggris selama dua tahun?)</i>\n\n</string>
    <string name="tenses5">Simple Past Tense digunakan untuk menyatakan suatu perbuatan atau peristiwa yang telah terjadi pada waktu lampau dan tidak ada hubungannya dengan masa sekarang.
    </string>
    <string name="tenses55"><b>( + )</b> S + V2\n<b>( - )</b> S + did not + V1\n<b>( ? )</b> Did + S + V1\n</string>
    <string name="tenses555"><b>( + )</b> I went to Campus yesterday.\n
                    <i>(Saya pergi ke Kampus kemarin.)</i>\n
                <b>( - )</b> I did not go to Campus yesterday.\n
                    <i>(Saya tidak pergi ke Kampus kemarin.)</i>\n
                <b>( ? )</b> Did you go to Campus yesterday?\n
                    <i>(Apakah kamu pergi ke Kampus kemarin?)</i>\n\n</string>
    <string name="tenses6">Past Continuous Tense digunakan untuk menyatakan suatu perbuatan atau peristiwa yang sedang beralangsung pada waktu lampau ketika kejadian lain terjadi.
    </string>
    <string name="tenses66"><b>( + )</b> S + was/were + Ving\n<b>( - )</b> S + was/were + not + Ving\n<b>( ? )</b> Was/were + S + Ving\n </string>
    <string name="tenses666"><b>( + )</b> I was listening to radio when the telephone rang \n
                    <i>(Saya sedang mengdengarkan radio ketika telepon berbunyi.)</i>\n
                <b>( - )</b> I wasn’t watching TV when you phoned me. \n
                <i>(Saya tidak sedang menonton TV ketika anda menelpon saya.)</i>\n
                <b>( ? )</b> Were you Watching TV when I called you?\n
                    <i>(Apakah kamu sedang menonton TV ketika saya menelpon kamu?)</i>\n\n</string>
    <string name="tenses7">Past Perfect Tense digunakan untuk menerangkan suatu perbuatan atau peristiwa yang sudah selesai dilakukan pada waktu lampau.
    </string>
    <string name="tenses77"><b>( + )</b> S + had + V3\n<b>( - )</b> S + had + not + V3\n<b>( ? )</b> Had + S + V3\n</string>
    <string name="tenses777"><b>( + )</b> I had gone when He arrived at my Home. \n
                    <i>(Saya pergi ketika dia tiba di rumah saya.)</i>\n
                <b>( - )</b> She hadn’t been at home. \n
                    <i>(Dia tidak ada di rumah.)</i>\n
                <b>( ? )</b> Had you studied English when your father come here?\n
                    <i>(Apakah kamu telah belajar Bahasa Inggris ketika ayahmu ke sini?)</i>\n\n</string>
    <string name="tenses8">Past Perfect Continuous Tense digunakan untuk menyatakan suatu perbuatan atau peristiwa yang sudah dimulai pada waktu lampau dan masih berlangsung terus hingga pada waktu yang lampau pula.
    </string>
    <string name="tenses88"><b>( + )</b> S + had + been + Ving\n<b>( - )</b> S + had + not + been + Ving\n<b>( ? )</b> Had + S + been + Ving\n</string>
    <string name="tenses888"><b>( + )</b> He had been living in here before he moved to Semarang.\n
                    <i>(Dia telah tinggal di sini, sebelum dia pindah ke Semarang.)</i>\n
                <b>( - )</b> They had not been sleeping until I can me to meet him.\n
                    <i>(Mereke belum sedang tidur hingga saya menemui mereka.)</i>\n
                <b>( ? )</b> Had she been finishing her duty before her leader inspected it?\n
                    <i>(Apakah dia sudah menyelesaikan tugas-tugasnya sebelum pimpinannya memeriksanya?)</i>\n\n</string>
    <string name="tenses9">Future Tense digunakan untuk menyatakan suatu perbuatan atau peristiwa yang terjadi atau dilakukan pada waktu yang akan datang. Ciri penandanya misalnya terdapat kata tomorrow, next month, next year, next saturday, dan sebagainya.
    </string>
    <string name="tenses99"><b>( + )</b> S + will + V1\n<b>( - )</b> S + will + not + V1\n<b>( ? )</b> Will + S + V1\n </string>
    <string name="tenses999"><b>( + )</b> I will do to Jakarta next week. \n
                    <i>(Saya akan ke Jakarta minggu depan.)</i>\n
                <b>( - )</b> They will not sail to the sea. \n
                    <i>(Mereka tidak akan berlayar ke lautan.)</i> \n
                <b>( ? )</b> What will she do then?\n
					<i>(Apa yang akan dia lakukan selanjutnya?)</i>\n\n</string>
    <string name="tenses10">Future Continuous Tense digunakan untuk menyatakan suatu perbuatan atau peristiwa yang akan sedang terjadi pada waktu yang akan datang.
    </string>
    <string name="tenses1010"><b>( + )</b> S + will + be + Ving\n<b>( - )</b> S + will + not + be + Ving\n<b>( ? )</b> Will + S + be + Ving\n</string>
    <string name="version_app">Version 1.0</string>
    <string name="copyright">Copyright 2016–2017</string>
</resources>