<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_beranda"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/navigation2"
            android:checked="false"
            android:icon="@drawable/ic_profil"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/navigation3"
            android:checked="false"
            android:icon="@drawable/ic_daftar"
            android:title="@string/navigation_view_item_3" />


    </group>


    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/navigasi_kategori_2">
        <menu>
            <item
                android:id="@+id/navigation4"
                android:checked="false"
                android:icon="@drawable/ic_setting"
                android:title="@string/navigation_view_item_4" />
            <item
                android:id="@+id/navigation5"
                android:checked="false"
                android:icon="@drawable/ic_about"
                android:title="@string/navigation_view_item_5" />

        </menu>
    </item>








    <item
        android:id="@+id/action_share"
        android:title="@string/app_name"
        app:showAsAction="never"
        android:icon="@drawable/ic_share_white_48dp"/>



</menu>